Allow Release/Beta/Daily Channel text to be localized.

--- a/website/_includes/site-prefooter.html
+++ b/website/_includes/site-prefooter.html
@@ -34,13 +34,13 @@
         <nav>
           <ul class="list-none p-0 flex flex-wrap font-semibold tabs-nav">
             <li id="channel" class="release">
-              <label for="release">Release Channel</label>
+              <label for="release">{{ _('Release Channel') }}</label>
             </li>
             <li class="beta">
-              <label for="beta">Beta Channel</label>
+              <label for="beta">{{ _('Beta Channel') }}</label>
             </li>
             <li class="daily">
-              <label for="daily">Daily Channel</label>
+              <label for="daily">{{ _('Daily Channel') }}</label>
             </li>
           </ul>
         </nav>
