Swap the old mozilla mailing list url for the new thunderbird url.

--- a/website/_includes/donate-mailing-list.html
+++ b/website/_includes/donate-mailing-list.html
@@ -29,7 +29,7 @@
       {{ _('Keep up with the latest and greatest updates on news, features, events, and previews, and get a sneak peek on the upcoming releases.') }}
     </p>
     <!-- Begin Mailchimp Signup Form -->
-    <form action="https://mozilla.us12.list-manage.com/subscribe/post?u=f8051cc8637cf3ff79661f382&amp;id=9badb0cec2"
+    <form action="https://thunderbird.us12.list-manage.com/subscribe?u=f8051cc8637cf3ff79661f382&id=56428f2efc"
     class="shadow flex items-center rounded-md self-start p-1"
     method="post" id="mc-embedded-subscribe-form"
     name="mc-embedded-subscribe-form">
