Include the fundraiseup js snippet on any page that uses the donation modal, and hide the amounts section.

--- a/website/_includes/bedrock/base-resp.html
+++ b/website/_includes/bedrock/base-resp.html
@@ -97,6 +97,7 @@
       <script type="text/javascript" src="/media/js/common-bundle.js" charset="utf-8"></script>
       <script type="text/javascript" src="https://js.braintreegateway.com/web/dropin/1.32.1/js/dropin.min.js" charset="utf-8"></script>
     {% endblock %}
+    {% block additional_site_js %}{% endblock %}
     {% block tracker_js %}
       <script type="text/javascript" src="/media/js/piwik.js" async defer></script>
       <script type="text/javascript" src="/media/js/matomo.js" charset="utf-8"></script>
