Some style tweaks, I forgot in the last commit.
- Add a placeholder min-width/height to prevent a jarring pop-in.
- Remove the cool hover/box shadow effect, since we can't really replicate it for the custom element.

--- a/assets/less/components/buttons.less
+++ b/assets/less/components/buttons.less
@@ -279,3 +279,11 @@ button {
 .windows.sha-1 .download-button .os_winsha1 {
   display: block !important;
 }
+
+.no-hover {
+  &:hover,
+  &:focus {
+    box-shadow: unset;
+    transform: unset;
+  }
+}
