--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -52,7 +52,7 @@
 * Sizing
 *--------------------------*/
 @widths: {
-  w-auto: auto;
+  w-auto:auto;
   // w-px:1px;
   // w-0: 0;
   // w-1: 0.25rem;
@@ -129,7 +129,7 @@
   // h-5: 1.25rem;
   h-6: 1.5rem;
   // h-8: 2rem;
-  h-10: 2.5rem;
+  // h-10: 2.5rem;
   // h-12: 3rem;
   // h-16: 4rem;
   // h-20: 5rem;
@@ -242,9 +242,9 @@
 *--------------------------*/
 @z-index: {
   // z-0: 0;
-  z-10: 10;
-  z-20: 20;
-  z-30: 30;
+  // z-10: 10;
+  // z-20: 20;
+  // z-30: 30;
   // z-40: 40;
   // z-50: 50;
 }
