Fill in some blank anchor tags, and a small cleanup.

--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -60,28 +60,22 @@
         </a>
       </li>
       <li class="mr-4">
-        <a class="text-black-lightest no-underline" href="">
+        <a class="text-black-lightest no-underline" href="https://www.mozilla.org/en-US/privacy/websites/">
           {{ _('Privacy Policy') }}
         </a>
       </li>
       <li class="mr-4">
-        <a class="text-black-lightest no-underline" href="">
+        <a class="text-black-lightest no-underline" href="https://give.thunderbird.net/en-CA/ways-to-give/">
           {{ _('Other ways to donate') }}
         </a>
       </li>
       <li>
-        <a class="text-black-lightest no-underline" href="">
+        <a class="text-black-lightest no-underline" href="https://give.thunderbird.net/en-CA/faq/">
           {{ _('FAQ') }}
         </a>
       </li>
     </ul>
   </footer>
-</div>
-
-<div id="checkout-modal" class="modal">
-  <div id="checkout-message"></div>
-  <div id="dropin-container"></div>
-  <button id="submit-button">{{ _('Submit payment') }}</button>
 </div>
 
 <div id="modal-overlay" class="fixed pin-t pin-l m-0 p-0 w-full h-full z-20 bg-black opacity-50 hidden" tabindex="-1"></div>
