Fill in window._lang for FRU. When viewing with a supported language it will use the current language code. Otherwise it will default to en-US.

--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -18,6 +18,9 @@
   t.parentNode.insertBefore(j,t);o.s=Date.now();o.v=4;o.h=w.location.href;o.l=[];
   for(i=0;i<7;i++)o[l[i]]=o(l[i]);w[n]=o}
   })(window,document,'script','FundraiseUp','ADGJGYAN');
+
+  // Set FRU's language
+  window._lang = "{{ get_fru_language() }}";
 </script>
 {% endblock %}
 
