--- a/website/_includes/base-resp.html
+++ b/website/_includes/base-resp.html
@@ -24,7 +24,7 @@
       {% endblock %}
 
       {% block site_header_nav %}
-        <a href="{{ donate_url('header') }}" class="btn-donate md:hidden">
+        <a href="{{ donate_url('header') }}" class="btn-donate md:hidden" data-donate-btn>
           <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
         </a>
         <nav id="nav-main" role="navigation" class="flex-grow md:flex-grow-0">
@@ -48,7 +48,7 @@
               <a href="{{ url('blog') }}" class="nav-link">{{_('Blog')}}</a>
             </li>
             <li class="hidden md:inline">
-              <a href="{{ donate_url('header') }}" class="btn-donate">
+              <a href="{{ donate_url('header') }}" class="btn-donate" data-donate-btn>
                 <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
               </a>
             </li>
