Fix #366: Replace all donation links with FRU versions. (#368)
* Hook up the FRU donation form redirect with all (known) donation buttons

* Ensure we don't start a download if we've clicked on a regular donate button and previously opened a download/donate modal

* Fix a bug that broke beta/daily download links.

* 362 - UTM feature parity with older donation flow

--- a/website/_includes/donate-mailing-list.html
+++ b/website/_includes/donate-mailing-list.html
@@ -13,7 +13,7 @@
     <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
       {{ _('Thunderbird is both free and freedom respecting, but we’re also completely funded by donations! Help us sustain the project and continue to improve.') }}
     </p>
-    <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0 font-lg lg:font-base">
+    <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0 font-lg lg:font-base" data-donate-btn data-donate-content="home_page_body">
       <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
     </a>
   </aside>
