--- a/website/_includes/site-prefooter.html
+++ b/website/_includes/site-prefooter.html
@@ -17,7 +17,7 @@
           {{_('Join Us')}}
         </a>
         <p class="font-sm mt-0 text-blue font-semibold self-start">
-          <a href="{{ donate_url('pre_footer') }}" class="small-link text-blue">{{ _('Make a Donation') }}</a> &bull;
+          <a href="{{ donate_url('pre_footer') }}" class="small-link text-blue" data-donate-btn data-donate-content="pre_footer">{{ _('Make a Donation') }}</a> &bull;
           <a href="https://support.mozilla.org/products/thunderbird/"
             class="small-link text-blue">{{ _('Get Support') }}</a> &bull;
           <a href="https://bugzilla.mozilla.org/describecomponents.cgi?product=Thunderbird"
