Create a newsletter landing page, and consolidate the newsletter form.

--- a/website/_includes/donate-mailing-list.html
+++ b/website/_includes/donate-mailing-list.html
@@ -28,18 +28,6 @@
     <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
       {{ _('Keep up with the latest and greatest updates on news, features, events, and previews, and get a sneak peek on the upcoming releases.') }}
     </p>
-    <!-- Begin Mailchimp Signup Form -->
-    <form action="https://thunderbird.us12.list-manage.com/subscribe?u=f8051cc8637cf3ff79661f382&id=56428f2efc"
-    class="shadow flex items-center rounded-md self-start p-1"
-    method="post" id="mc-embedded-subscribe-form"
-    name="mc-embedded-subscribe-form">
-    <input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
-    class="md:w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
-    <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
-    <!-- Prevent Bot signups -->
-    <div style="position: absolute; {{ 'right' if DIR=='rtl' else 'left'}}: -5000px;" aria-hidden="true"><input type="text"
-      name="b_f8051cc8637cf3ff79661f382_9badb0cec2" tabindex="-1" value=""></div>
-    </form>
-    <!--End mc_embed_signup-->
+    {% include '_includes/newsletter-form.html' %}
   </aside>
 </section>
