--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -25,6 +25,7 @@
 @import "components/links.less";
 @import "components/buttons.less";
 @import "components/donation-elements.less";
+@import "components/faq.less";
 @import "components/forms.less";
 @import "components/headings.less";
 @import "components/markup.less";
