font-style support 😎 - Allows for the much needed italicized font styling.

--- a/assets/less/base/fonts.less
+++ b/assets/less/base/fonts.less
@@ -16,6 +16,13 @@ each(@fonts, #(@k, @v) {
   }
 });
 
+// Font Style
+each(@font-style, #(@k, @v) {
+  .@{v} {
+    font-style: @k;
+  }
+});
+
 // Font Weight
 each(@font-weight, #(@k, @v) {
   .@{v} {
