--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -406,6 +406,13 @@
   font-hero: 59px;
 }
 
+// Font Style
+@font-style: {
+  font-style-normal: normal;
+  font-style-italic: italic;
+  font-style-oblique: oblique;
+}
+
 // Font Weight
 @font-weight: {
   font-hairline: 100;
