Donation Page - Add Other Ways to Give section, add legend, and re-work a bunch of styling.

--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -58,3 +58,11 @@
     min-width: 225px;
     min-height: 57px;
 }
+.ways-to-give-list-info {
+    &:extend(.pl-0);
+    list-style: none;
+
+    li {
+        &:extend(.pb-2);
+    }
+}
