--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -3,7 +3,7 @@
     <aside class="flex flex-col items-center lg:items-start">
       <a href="{{ url('thunderbird.index') }}" class="block w-40" title="{{ _('Thunderbird') }}"
         alt="{{ _('Thunderbird Vector Wordmark') }}">
-        {{ svg('logo-wordmark-white') }}
+        <img src="{{ static('svg/logo-wordmark-white.svg') }}" alt="{{ _('Thunderbird Vector Wordmark') }}"/>
       </a>
 
       <nav id="footer-main" role="navigation" class="mt-2">
