Make the newsletter input and button about double in size.

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -128,7 +128,7 @@
   h-4: 1rem;
   // h-5: 1.25rem;
   h-6: 1.5rem;
-  // h-8: 2rem;
+  h-8: 2rem;
   // h-10: 2.5rem;
   // h-12: 3rem;
   // h-16: 4rem;
