--- a/website/_includes/donate-mailing-list.html
+++ b/website/_includes/donate-mailing-list.html
@@ -28,6 +28,9 @@
     <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
       {{ _('Keep up with the latest and greatest updates on news, features, events, and previews, and get a sneak peek on the upcoming releases.') }}
     </p>
-    {% include '_includes/newsletter-form.html' %}
+    <div class="max-w-lg">
+      {% include '_includes/newsletter-form.html' %}
+    </div>
   </aside>
 </section>
+
