--- a/website/_includes/newsletter-form.html
+++ b/website/_includes/newsletter-form.html
@@ -4,7 +4,7 @@ class="shadow flex items-center rounded-md self-start p-1"
 method="post" id="mc-embedded-subscribe-form"
 name="mc-embedded-subscribe-form">
 <input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
-class="md:w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
+class="w-full h-6 appearance-none border-none p-2 tracking-wide font-semibold font-md" required>
 <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
 <!-- Prevent Bot signups -->
 <div style="position: absolute; {{ 'right' if DIR=='rtl' else 'left'}}: -5000px;" aria-hidden="true"><input type="text"
