WIP alternate newsletter page styling, crudely pull in social media links for now

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -16,6 +16,7 @@
   grey: #f9f9f9;
   grey-light: #f0f0f0;
   grey-lighter: #fdfdfd;
+  grey-lightest: #b1b1b3;
   blue-dark: #36385A;
   orange: #ff9500;
   blue-lightest: #B2D9FF;
