Fix footer logo not centering properly on large displays

--- a/website/_includes/site-footer.html
+++ b/website/_includes/site-footer.html
@@ -1,6 +1,6 @@
 <footer id="colophon" class="bg-black-light text-white flex flex-col pt-10 pb-8 pl-4 pr-4">
   <section class="flex flex-col lg:flex-col justify-between items-center self-center w-full max-w-6xl">
-    <aside class="flex flex-col items-center lg:items-start">
+    <aside class="flex flex-col items-center">
       <a href="{{ url('thunderbird.index') }}" class="block w-40" title="{{ _('Thunderbird') }}"
         alt="{{ _('Thunderbird Vector Wordmark') }}">
         <img src="{{ static('svg/logo-wordmark-white.svg') }}" alt="{{ _('Thunderbird Vector Wordmark') }}"/>
