Add the heart beat, and heart wave animations

--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -43,7 +43,12 @@
     </section>
     <section id="donate-buttons" class="flex justify-center mt-6 mb-6">
       <button class="btn-donate-and-download" id="amount-submit">
-        <span class="donate-heart">{{ svg('heart') }}</span>
+        <span class="donate-wave">
+          <!-- o/ -->
+        </span>
+        <span class="donate-heart">
+          {{ svg('heart') }}
+        </span>
         <span>{{ _('Donate & Download') }}</span>
       </button>
       <button class="btn-body btn-secondary" id="amount-cancel">
