--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -37,7 +37,7 @@
                             &:extend(.font-md);
                         }
                     }
-                    
+
                 }
                 &.active {
                     &:extend(.border-blue, .bg-blue-25, .shadow-none);
@@ -75,9 +75,25 @@
     .border,
     .border-solid);
 
+    contain: paint;
+
+    .donate-wave {
+        display: inline-flex;
+        position: absolute;
+        margin: auto;
+        left: -218px;
+        top: -224px;
+        width: 512px;
+        height: 512px;
+        border-radius: 50%;
+        animation: linear 2.00s heart-wave infinite;
+    }
     .donate-heart {
         &:extend(.w-5, .mr-2, .text-blue);
         float: left;
+        svg {
+          animation: linear 1000ms alternate heart-bounce infinite;
+        }
     }
 
     &:hover,
@@ -85,4 +101,30 @@
         &:extend(.shadow-md);
         .transform(translateY(-7%));
     }
+}
+
+@keyframes heart-bounce {
+  from {
+    transform: scale(1.0);
+  }
+
+  to {
+    transform: scale(1.3);
+  }
+}
+@keyframes heart-wave {
+  from {
+    transform: scale(0.0);
+    background-color: rgba(0, 128, 255, 0.25);
+
+  }
+  25% {
+    transform: scale(0.0);
+    background-color: rgba(0, 128, 255, 0.25);
+  }
+
+  to {
+    transform: scale(2.0);
+    background-color: rgba(0, 128, 255, 0.0);
+  }
 }
