--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -54,6 +54,11 @@
     }
 }
 
+// Helper function / constant for our blue
+.colour-blue(@alpha) {
+    background-color: rgba(0, 128, 255, @alpha);
+}
+
 .btn-donate-and-download {
     &:extend(.flex,
     .bg-white,
@@ -61,7 +66,6 @@
     .font-lg,
     .font-semibold,
     .no-underline,
-  //  .uppercase,
     .inline-block,
     // Help centre the text
     .pb-5,
@@ -75,24 +79,57 @@
     .border,
     .border-solid);
 
+    // Make sure our donate-wave div doesn't render outside of the button
     contain: paint;
 
+    // Remove the animation if they prefer reduced motion
+    @media (prefers-reduced-motion) {
+        .donate-wave {
+            animation: none !important;
+        }
+
+        .donate-heart {
+            svg {
+                animation: none !important;
+            }
+        }
+    }
+
+    /*
+    TODO: Look at this later, animations reset and jump very roughly.
+    &:hover {
+        .donate-wave {
+            animation-duration: 1s;
+        }
+
+        .donate-heart {
+            svg {
+                animation-duration: 0.5s;
+            }
+        }
+    }
+    */
+
     .donate-wave {
-        display: inline-flex;
         position: absolute;
         margin: auto;
+        // Not the greatest, but it works
         left: -218px;
         top: -224px;
         width: 512px;
         height: 512px;
         border-radius: 50%;
-        animation: linear 2.00s heart-wave infinite;
+        // donate-wave should be twice the length of donate-heart animation,
+        // since donate-heart bounces back and forth.
+        animation: linear 2s heart-wave infinite;
     }
+
     .donate-heart {
-        &:extend(.w-5, .mr-2, .text-blue);
+        &:extend(.w-4, .mr-2, .text-blue);
         float: left;
+
         svg {
-          animation: linear 1000ms alternate heart-bounce infinite;
+            animation: linear 1s alternate heart-bounce infinite;
         }
     }
 
@@ -100,31 +137,32 @@
     &:focus {
         &:extend(.shadow-md);
         .transform(translateY(-7%));
+        .colour-blue(0.25);
     }
 }
 
 @keyframes heart-bounce {
-  from {
-    transform: scale(1.0);
-  }
-
-  to {
-    transform: scale(1.3);
-  }
+    from {
+        transform: scale(1.0);
+    }
+    to {
+        transform: scale(1.3);
+    }
 }
+
 @keyframes heart-wave {
-  from {
-    transform: scale(0.0);
-    background-color: rgba(0, 128, 255, 0.25);
-
-  }
-  25% {
-    transform: scale(0.0);
-    background-color: rgba(0, 128, 255, 0.25);
-  }
-
-  to {
-    transform: scale(2.0);
-    background-color: rgba(0, 128, 255, 0.0);
-  }
+    from {
+        transform: scale(0);
+    }
+    25% {
+        transform: scale(0);
+        .colour-blue(0.35);
+    }
+    35% {
+        .colour-blue(0.15);
+    }
+    to {
+        transform: scale(200%);
+        .colour-blue(0.0);
+    }
 }
