--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -38,21 +38,19 @@
   <form action="">
     <section class="font-lg pt-0 pl-6 pb-4 pr-6 leading-normal text-center">
       <p>{{ _('Thunderbird is independent, free, and Open Source software sustained by your donations. Help us keep the project alive!') }}</p>
-              <a href="#XSHRMXJE" style="display: none"></a>
-
     </section>
     <section id="donate-buttons" class="flex justify-center mt-6 mb-6">
-      <button class="btn-donate-and-download" id="amount-submit">
+      <a href="#" class="btn-donate-and-download" id="amount-submit" data-donate-content="download">
         <span class="donate-wave">
           <!-- o/ -->
         </span>
         <span class="donate-heart">
           {{ svg('heart') }}
         </span>
-        <span>{{ _('Donate & Download') }}</span>
-      </button>
-      <button class="btn-body btn-secondary" id="amount-cancel">
-        {{ _('No Thanks, Download Now!') }}
+        {{ _('Donate & Download') }}
+      </a>
+      <a href="#" class="btn-body btn-secondary" id="amount-cancel">
+        <p>{{ _('No Thanks, Download Now!') }}</p>
         <span>
           <svg viewBox="0 0 7 12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="UI" stroke="none" stroke-width="1" fill="currentColor" fill-rule="evenodd">
@@ -60,7 +58,7 @@
             </g>
           </svg>
         </span>
-      </button>
+      </a>
     </section>
   </form>
   <footer class="w-4/5 mx-auto border-0 border-t border-solid border-grey-light p-6">
