Lots of small positional and sizing tweaks to Donate & Download button.

--- a/assets/less/base/variables.less
+++ b/assets/less/base/variables.less
@@ -126,7 +126,7 @@
   // h-2: 0.5rem;
   h-3: 0.75rem;
   h-4: 1rem;
-  // h-5: 1.25rem;
+  h-5: 1.25rem;
   h-6: 1.5rem;
   // h-8: 2rem;
   // h-10: 2.5rem;
