--- a/website/_includes/donate-modal.html
+++ b/website/_includes/donate-modal.html
@@ -39,15 +39,15 @@
     <section class="font-lg pt-0 pl-6 pb-4 pr-6 leading-normal text-center">
       <p>{{ _('Thunderbird is independent, free, and Open Source software sustained by your donations. Help us keep the project alive!') }}</p>
     </section>
-    <section id="donate-buttons" class="flex justify-center mt-6 mb-6">
+    <section id="donate-buttons" class="flex justify-center mt-6 mb-6 mx-auto">
       <a href="#" class="btn-donate-and-download" id="amount-submit" data-donate-content="download">
-        <span class="donate-wave">
-          <!-- o/ -->
-        </span>
         <span class="donate-heart">
           {{ svg('heart') }}
+          <span class="donate-wave">
+          <!-- o/ -->
+          </span>
         </span>
-        {{ _('Donate & Download') }}
+        <p>{{ _('Donate & Download') }}</p>
       </a>
       <a href="#" class="btn-body btn-secondary" id="amount-cancel">
         <p>{{ _('No Thanks, Download Now!') }}</p>
