--- a/assets/less/base/spacing.less
+++ b/assets/less/base/spacing.less
@@ -31,6 +31,10 @@ each(@margins, #(@k, @v) {
   margin-left: auto;
   margin-right: auto;
 }
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
+}
 
 each(@breakpoints, #(@k, @v) {
   @media (min-width: @k) {
