Forgot to commit this part..

--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -133,8 +133,8 @@
         &:extend(.mr-2, .text-blue);
 
         margin-top: 0.20rem;
-        width: var(--heart-wh);
-        height: var(--heart-wh);
+        width: @heart-wh;
+        height: @heart-wh;
 
         svg {
             animation: linear @heart-animation-speed alternate heart-bounce infinite;
