--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -99,15 +99,15 @@
     // Make sure our donate-wave div doesn't render outside of the button
     contain: paint;
 
-    // Remove the animation if they prefer reduced motion
-    @media (prefers-reduced-motion) {
+    // Only appy our cool animations if they want it.
+    @media (prefers-reduced-motion: no-preference) {
         .donate-wave {
-            animation: none !important;
+            animation: linear @heart-wave-animation-speed heart-wave infinite;
         }
 
         .donate-heart {
             svg {
-                animation: none !important;
+                animation: linear @heart-animation-speed alternate heart-bounce infinite;
             }
         }
     }
@@ -123,22 +123,14 @@
         width: 512px;
         height: 512px;
         border-radius: 50%;
-
-        // donate-wave should be twice the length of donate-heart animation,
-        // since donate-heart bounces back and forth.
-        animation: linear @heart-wave-animation-speed heart-wave infinite;
     }
 
     .donate-heart {
         &:extend(.mr-2, .text-blue);
 
-        margin-top: 0.20rem;
+        margin-top: 0.15rem;
         width: @heart-wh;
         height: @heart-wh;
-
-        svg {
-            animation: linear @heart-animation-speed alternate heart-bounce infinite;
-        }
     }
 
     p {
