--- a/assets/less/components/donation-elements.less
+++ b/assets/less/components/donation-elements.less
@@ -2,6 +2,10 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+#modal-overlay {
+    z-index: 9;
+}
+
 .modal {
     top: 50%;
     transform: translateY(-50%);
