--- a/assets/less/components/links.less
+++ b/assets/less/components/links.less
@@ -74,7 +74,7 @@ a {
 }
 
 .social-link-large {
-  &:extend(.social-link, .font-regular, .bg-grey, .text-blue, .font-semibold, .shadow-md, .mb-4);
+  &:extend(.social-link, .font-regular, .bg-grey, .text-blue-dark, .font-semibold, .shadow-md, .mb-4);
   min-width: 164px;
 
   span {
@@ -92,7 +92,7 @@ a {
 
   &:hover,
   &:focus {
-    &:extend(.bg-blue, .text-white);
+    &:extend(.bg-blue-dark, .text-white);
   }
 }
 
