--- a/website/_includes/newsletter-form.html
+++ b/website/_includes/newsletter-form.html
@@ -1,10 +1,9 @@
 <!-- Begin Mailchimp Signup Form -->
 <form action="https://thunderbird.us12.list-manage.com/subscribe?u=f8051cc8637cf3ff79661f382&id=56428f2efc"
-class="shadow flex items-center rounded-md self-start p-1"
+class="newsletter-form"
 method="post" id="mc-embedded-subscribe-form"
 name="mc-embedded-subscribe-form">
-<input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
-class="w-full h-6 appearance-none border-none p-2 tracking-wide font-semibold font-md" required>
+<input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}" required>
 <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
 <!-- Prevent Bot signups -->
 <div style="position: absolute; {{ 'right' if DIR=='rtl' else 'left'}}: -5000px;" aria-hidden="true"><input type="text"
